--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "next-search",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ash-h/next-search.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ash-h/next-search/issues"
+  },
+  "homepage": "https://github.com/ash-h/next-search#readme",
+  "description": "",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
